# pjrt-artifacts

.github/workflows/: build.yaml  nightly.yaml
base/jammy/: BUILD.bazel  packages.yaml
cpu/: BUILD.bazel  cpu_ubuntu.yaml
openxla/bazelrc/: cuda.bazelrc  cuda_lovelace.bazelrc  cuda_pascal.bazelrc
