load("@rules_distroless//distroless:defs.bzl", "cacerts", "flatten", "group", "passwd")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//utils/bazel/dedup_tar:defs.bzl", "dedupe_tar")

passwd(
    name = "passwd",
    entries = [
        {
            "uid": 0,
            "gid": 0,
            "home": "/root",
            "shell": "/bin/bash",
            "username": "r00t",
        },
        {
            "uid": 100,
            "gid": 65534,
            "home": "/home/_apt",
            "shell": "/usr/sbin/nologin",
            "username": "_apt",
        },
    ],
    visibility = ["//visibility:public"],
)

cacerts(
    name = "cacerts_amd64",
    package = "@jammy_ubuntu//ca-certificates/amd64:data",
    visibility = ["//visibility:public"],
)

cacerts(
    name = "cacerts_arm64",
    package = "@jammy_ubuntu//ca-certificates/arm64:data",
    visibility = ["//visibility:public"],
)

group(
    name = "group",
    entries = [
        {
            "name": "root",
            "gid": 0,
        },
        {
            "name": "_apt",
            "gid": 65534,
        },
    ],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "bazelisk",
    srcs = [
        "@bazelisk//file",
    ],
    package_dir = "/usr/bin",
    visibility = ["//visibility:public"],
)

PACKAGES = [
    "@jammy_ubuntu//wget",
    "@jammy_ubuntu//apt",
    "@jammy_ubuntu//bash",
    "@jammy_ubuntu//ca-certificates",
    "@jammy_ubuntu//coreutils",
    "@jammy_ubuntu//dpkg",
    "@jammy_ubuntu//gawk",
    "@jammy_ubuntu//libncurses6",
    "@jammy_ubuntu//perl",
    "@jammy_ubuntu//python3",
    "@jammy_ubuntu//tzdata",
    "@jammy_ubuntu//strace",
    "@jammy_ubuntu//grep",
    "@jammy_ubuntu//openssl",
    "@jammy_ubuntu//build-essential",
    "@jammy_ubuntu//gcc",
    "@jammy_ubuntu//g++",
    "@jammy_ubuntu//gzip",
    "@jammy_ubuntu//findutils",
    "@jammy_ubuntu//sed",
    "@jammy_ubuntu//libelf1",
    "@jammy_ubuntu//libdrm2",
    "@jammy_ubuntu//libdrm-amdgpu1",
    "@jammy_ubuntu//libnuma1",
    "@jammy_ubuntu//libxml2",
    "@jammy_ubuntu//libexpat1",
    "@jammy_ubuntu//libexpat1-dev",
]

flatten(
    name = "flatten_packages_amd64",
    tars = [
        "%s/amd64" % package
        for package in PACKAGES
    ],
)

flatten(
    name = "flatten_packages_arm64",
    tars = [
        "%s/arm64" % package
        for package in PACKAGES
    ],
)

dedupe_tar(
    name = "packages_amd64",
    src = ":flatten_packages_amd64",
    visibility = ["//visibility:public"],
)

dedupe_tar(
    name = "packages_arm64",
    src = ":flatten_packages_arm64",
    visibility = ["//visibility:public"],
)
